 (Format: Year/Month/Day)
Changes for 1.1:
*07/05/12:
   * Fixed tabs disappearing with [Deco] {TAB} and tabs in titlebar (Mark)
     Window.cc Screen.cc
*07/05/04:
   * Fixed infinite loop caused by deiconify command (Mark)
     FbCommands.cc
*07/04/24:
   * Fixed a bug in parsing cli (Mathias, thanks to Steven Kah Hien Wong <steven
     at zensaki dot com> for pointing out the issue)
     src/main.cc
*07/04/23:
   * Set IconicState on all unmapped clients and unmap clients with frames, as
     per ICCCM 4.1.4 (Mark)
     Screen.cc Window.cc FocusControl.cc
   * Added ClientMenu key command, which pops up a menu of open windows, based
     on a pattern match
     - e.g. :ClientMenu (workspace=[current]) (minimized=no)
     ClientMenu.cc FbCommands.cc/hh FbCommandFactory.cc
   * Disabled resizing shaded windows (Mark)
     FbWinFrame.cc Window.cc
*07/04/20:
   * Fix slit's BOTTOMLEFT placement with xinerama (Thanks Tomas Janousek
     <tomi@nomi.cz>)
     Slit.cc
*07/04/11:
   * Added resource session.screen<N>.maxIgnoreIncrement: <boolean>, to
     disable size checking when maximizing a window (e.g. terminals) (Mark)
     - Also added a new configuration submenu for maximize options, to be filled
       at a later date
     Screen.cc/hh Window.cc
*07/04/08:
   * Added OnToolbar modifier to keys file (Mark)
     Keys.cc/hh Toolbar.cc/hh Screen.cc/hh IconbarTool.cc fluxbox.cc
   * Menu when clicking workspacename in toolbar wasn't getting focused (Mark)
     ToolFactory.cc
   * Removed followModel, since userFollowModel covers almost all cases (Mark)
     IconbarTool.cc ClientMenu.cc Screen.cc/hh Ewmh.cc Window.cc
   * Buttons with different textures when pressed weren't getting reset
     properly (Mark)
     FbTk/Button.cc
   * Only replace numbers with zeros when calculating clock width (Simon)
     Otherwise width of things in proportional fonts can be way out.
     sf.net bug #1545066.
     ClockTool.cc
*07/04/06:
   * More changes to theme handling (Mark)